# FinanceBot

./: .gitignore  README.md  SETUP.md  main.py  pyproject.toml  sig.txt  test_init.py
app/: agent.py  api.py  config.py  tools.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/lib/: use-chat.ts
